--- a/src/app/home/components/main/main.component.html
+++ b/src/app/home/components/main/main.component.html
@@ -53,7 +53,7 @@
         </div>
         <h3>For Caregivers</h3>
         <p>Complete a brief questionnaire to gain insights into your child's cognitive strengths and learning style.</p>
-        <a href="#" class="btn">Begin Questionnaire</a>
+        <a class="btn" tabindex="0" (click)="careGiverModule()" >Begin Questionnaire</a>
       </div>
       
       <div class="path-card" id="child-path">
