--- a/src/app/home/components/nav-bar/nav-bar.component.html
+++ b/src/app/home/components/nav-bar/nav-bar.component.html
@@ -36,7 +36,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a><div tabindex="0" (keydown.enter)="toggleLogout()" (click)="toggleLogout()">logout</div></a></li>
+        <li><a><div tabindex="0" (keydown.enter)="toggleLogout()" (click)="toggleLogout()">Logout</div></a></li>
       </ul>
     </nav>
   </div>
