--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -249,7 +249,7 @@
 
           <div class="auth-divider">Or continue with</div>
 
-          <button class="auth-anonymous" type="button">
+          <button class="auth-anonymous" type="button" (click)="exploreAnonymously()">
             Explore Anonymously
           </button>
         </form>
