--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,10 +1,18 @@
 <div>
   <app-nav-bar></app-nav-bar>
-  <div class="welcome-container">
+
+  <div class="grid grid-cols-2 gap-4">
+    <div class="welcome-container">
       <h1>Color and Word Game 🎨</h1>
       <p>Click the color you see, not the word you read! This fun activity helps us understand how your brain processes information.</p>
       <button class="btn" (click)="startGame()">Start Game</button>
-    </div>
-  <app-footer></app-footer>
+
+  </div>
+  <div class="welcome-container">
+    <h1>Phonics Finder</h1>
+    <button class="btn" (click)="startDysGame()">Start Game</button>
+  </div>
 </div>
   
+  <app-footer></app-footer>
+</div>
